<resources>
    <string name="app_name">Power Log</string>
    <string name="senha">Senha</string>
    <string name="email">Email</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="ja_tem_conta">Já possui conta? Faça login</string>
    <string name="criar_conta">Criar conta</string>
    <string name="esqueci">Esqueceu a senha?</string>
    <string name="lembrar_senha">Lembrar senha</string>
    <string name="btn_recuperar">Recuperar senha</string>
    <string name="txt_intrucao">Digite um email valido e enviaremos um email com as instruções para recuperar sua senha</string>
    <string name="title_activity_home">HomeActivity</string>
</resources>
