<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.github.florent37.materialtextfield.MaterialTextField
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:mtf_labelColor="#666"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.184"
        app:mtf_animationDuration="300"
        app:mtf_cardCollapsedHeight="2dp"
        app:mtf_image="@drawable/ic_email"
        app:mtf_backgroundColor="@color/colorPrimary"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:id="@+id/materialTextField">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColor="#333"
            android:inputType="textEmailAddress"
            android:textSize="15sp" />
    </com.github.florent37.materialtextfield.MaterialTextField>


    <com.github.florent37.materialtextfield.MaterialTextField
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:mtf_labelColor="#666"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:mtf_image="@drawable/ic_password"
        app:mtf_backgroundColor="@color/colorPrimary"
        app:mtf_cardCollapsedHeight="@dimen/colap"
        app:layout_constraintVertical_bias="0.498"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:id="@+id/materialTextField2">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:textColor="#333"
            android:textSize="15sp" />
    </com.github.florent37.materialtextfield.MaterialTextField>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/float_signing_btn"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        app:backgroundTint="@color/colorPrimary"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.896"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9"
        app:srcCompat="@drawable/ic_right" />

    <Button
        android:id="@+id/btn_esqueci_senha"
        android:textSize="10sp"
        android:text="@string/esqueci"
        android:background="@android:color/transparent"
        android:textColor="@color/colorDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.902"
        app:layout_constraintHorizontal_bias="0.092" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lembrar_senha"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.040"
        app:layout_constraintVertical_bias="0.657" />





</android.support.constraint.ConstraintLayout>
