<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.firebaseapp.wanderson_jackson.powerlogsignupapp.EsqueciSenhaActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0" />

    <com.github.florent37.materialtextfield.MaterialTextField
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:mtf_labelColor="#666"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:mtf_image="@drawable/ic_email"
        app:mtf_animationDuration="500"
        app:mtf_backgroundColor="@color/colorPrimary"
        app:mtf_cardCollapsedHeight="@dimen/colap"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:id="@+id/materialTextField2">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textPassword"
            android:textColor="#333"
            android:textSize="15sp" />
    </com.github.florent37.materialtextfield.MaterialTextField>
    <android.support.v7.widget.AppCompatButton
        android:layout_margin="16dp"
        android:background="@color/colorPrimary"
        android:text="@string/btn_recuperar"
        android:textColor="@color/colorAccent"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/toolbar"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.67" />

    <TextView
        android:id="@+id/textView_instrucao_recuperar_senha"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_intrucao"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.357" />

</android.support.constraint.ConstraintLayout>
