<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.github.florent37.materialtextfield.MaterialTextField
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:mtf_labelColor="#666"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintVertical_bias="0.078"
            app:mtf_animationDuration="300"
            app:mtf_cardCollapsedHeight="2dp"
            app:mtf_image="@drawable/ic_account_circle"
            app:mtf_backgroundColor="@color/colorPrimary"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:id="@+id/username_signup">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:textColor="#333"
                android:inputType="text"
                android:textSize="15sp" />
        </com.github.florent37.materialtextfield.MaterialTextField>
        <com.github.florent37.materialtextfield.MaterialTextField
            android:id="@+id/email_signup"

            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.341"
            app:mtf_animationDuration="300"
            app:mtf_backgroundColor="@color/colorPrimary"
            app:mtf_cardCollapsedHeight="2dp"
            app:mtf_image="@drawable/ic_email"
            app:mtf_labelColor="#666">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="#333"
                android:textSize="15sp" />
        </com.github.florent37.materialtextfield.MaterialTextField>



        <com.github.florent37.materialtextfield.MaterialTextField
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                app:mtf_animationDuration="300"
                app:mtf_labelColor="#666"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                app:mtf_image="@drawable/ic_password"
                app:mtf_backgroundColor="@color/colorPrimary"
                app:mtf_cardCollapsedHeight="@dimen/colap"
                app:layout_constraintVertical_bias="0.628"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:id="@+id/senha_signup">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/senha"
                    android:inputType="textPassword"
                    android:textColor="#333"
                    android:textSize="15sp" />
            </com.github.florent37.materialtextfield.MaterialTextField>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/float_signup_btn"
                app:backgroundTint="@color/colorPrimary"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:clickable="true"
                app:fabSize="mini"
                app:srcCompat="@drawable/ic_right"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintVertical_bias="0.9"
                app:layout_constraintHorizontal_bias="0.896" />
</android.support.constraint.ConstraintLayout>

